--- a/weak-test.html
+++ b/weak-test.html
@@ -7,7 +7,6 @@
 </body>
 
 <template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
+  <h1>Test of weak package dependencies</h1>
+  <p>Check server log for test results</p>
 </template>
